# CppAssembler

./: .gitignore  CMakeLists.txt  CppAssembler.sln  LICENSE  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
CppAssembler/: CMakeLists.txt  CppAssembler.vcxproj  CppAssembler.vcxproj.filters
CppAssembler/include/asm/: arch.h  defs.h  os.h  os_win32.h  replaceable.h
CppAssembler/include/asm/arch/: MMX.h  x64_base.h  x64_i386.h  x86_64_base.h  x86_CLDEMOTE.h  x86_CLFLUSHOPT.h  x86_CLFSH.h  x86_CMOV.h  x86_CMOVcc.h  x86_CX8.h  x86_MSR.h  x86_PMC.h  x86_SEP.h  x86_TSC.h  x86_base.h  x86_i386.h  x86_i386_optimized.h  x86_i387.h  x86_i486.h  x86_i586.h  x86_i686.h
CppAssembler/include/asm/os/: byte_order.h  host.h  linux32.h  linux64.h  unix32.h  unix64.h  win32.h
CppAssembler/source/: os.cpp
TestApplication/: CMakeLists.txt  TestApplication.vcxproj  main.cpp
UnitTest/: UnitTest.vcxproj  UnitTest.vcxproj.filters  stdafx.cpp  stdafx.h  unittest1.cpp
UnitTest/data/: adc.txt  add.txt  bsf.txt  bt.txt  in.txt  lea.txt  mov.txt  out.txt  ret.txt  test.txt
UnitTest/src/x86/: X86CodeGenTest.cpp  X86CompileTest.cpp
